[package]
name = "gazetteer"
version = "0.1.0"
edition = "2021"
authors = ["phyzics.z <phyzics.z@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geohash = "0.12"
warp = "0.3"
tokio = { version = "1.15", features = ["full"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"