[package]
name = "gazetteer"
version = "0.1.0"
edition = "2021"
authors = ["phyzics.z <phyzics.z@gmail.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
geohash = "0.12"
warp = "0.3"
tokio = { version = "1.15", features = ["full"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.17"

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3